# Physics

./: Q.m  README.md  calc.py  draw.py  hs.py  test.py
BlackHole/: Save.npy  bh.py  bh2.py  bh3.py  bh_new.py
BlackHole/BlackHoleRayMarching-master/: gr_ray_tracing_model.py  main.py  new_main.py  np_main.py
BlackHole/Pic/: pic2.py
Black_Hole/: bh.py
Black_Hole/Pic/: 2.txt
CS/: CS.py  nbody.py  test.py  test2.py  test3.py
CS/data/: snapshot_0010.npy  snapshot_0104.npy  snapshot_0303.npy  snapshot_1000.npy  (+104 more)
Course/: 模板-Copy1.ipynb  模板.ipynb
FPUT/: 2FPUT.py  2m_FPUT.py  FPUT.py  FPUT_alpha.py  Toda-FPUT.py  Toda.py  alpha-FPUT.py  beta-FPUT.py  int.py  lm.py  pyhs.py  test.py  testSPRK.py  test_pyhs.py
FPUT/sprk-cpp/: CMakeLists.txt
FPUT/sprk-cpp/src/: sprk.cpp
FPUT/sprk-cpp/test/: testSPRK.py
Free_particle_Schrodinger/: Free_particle_PDF.py
GR/: Schwarzschild.nb  Schwarzschild.wlnb
GRCalc/: GR_Calc.py  GR_Func.py  NumCalc.py  cache.py  constant.py  plot_pic.py  sol3.npy  test.py
GR_Calc/: GR_Calc.py  GR_Func.py  sol1.npy  sol11.npy  sol2.npy  sol21.npy  sol31.npy
GRbyC/: figure_1024.ppm  figure_t.ppm  gr.cpp  gr.hpp  main.cpp  mian.cpp  ppm.hpp  ppm2jpg.py  testmain
KHI/: KHI.py  KelvinHelmholtzInstability.py
LC/: 1.py  2.py  3.py
Light_in_cup/: Light_in_cup.nb
Schrodinger/: Free_particle_plot.py
Schrodinger_Python/: sch_anim.py  sch_sol.py
ThreeBodyProblemSim/: sim.py
Time_independent_Schrodinger/: Q.py
一维定态 Schrodinger 求解/: Q.py
一维自由粒子 Schrodinger 方程计算/: Free_particle_restructure.py
含时 Schrodinger 方程求解/: sch_sol.py
(+40 files in other folders)
